main page links

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,26 @@
 
 <body>
     <header>
-        <img src="http://placehold.it/100x100">
+        <img class="logo" src="http://placehold.it/100x100">
         <h1>Galvanized Reads</h1>
     </header>
-    <section>
-        <img src="http://placehold.it/400x300">
-        <img src="http://placehold.it/400x300">
+    <div class="container">
+
+    <section class="mainBody row">
+      <a href="authors.html">
+      <article class="col-md-6">
+        <img class="imgSub" src="http://placehold.it/400x300">
+        <h1 class="subtitle">Authors</h1>
+      </article>
+    </a>
+    <a href="books.html">
+      <article class="col-md-6">
+        <img class="imgSub" src="http://placehold.it/400x300">
+        <h1 class="subtitle">Books</h1>
+      </article>
+    </a>
     </section>
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
