--- a/public/books.html
+++ b/public/books.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Books</title>
-  </head>
-  <body>
+    <title>Galvanized Reads</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+</head>
+
+<body>
+    <header>
+        <img class="logo" src="http://placehold.it/100x100">
+        <h1>Galvanized Reads</h1>
+    </header>
     <h1>Books</h1>
-  </body>
+    <section>
+        <article class="">
+            <img class="booksImg" src="http://placehold.it/200x200">
+            <div class="bookTitle">
+                <h1>Book 1</h1>
+                <div class="myButtons">
+                <button class="myBtn" type="button" name="button">Edit</button>
+                <button class="myBtn" type="button" name="button">Remove</button>
+              </div>
+            </div>
+            <div class="">
+                <h3>Author Info</h3>
+                <h3>Genre</h3>
+                <h4>fdksafsldfldsjaflfjkdshkjfsdjkfhdksjfhkdshfksdhkjfhdskjfhdksjhfksf
+                  fdksjhfkjdshfkjshdkjfhdksjfhkjdshfkd
+                </h4>
+            </div>
+        </article>
+
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="./scripts/main.js"></script>
+</body>
+
 </html>
