--- a/public/books.html
+++ b/public/books.html
@@ -14,30 +14,14 @@
         <h1>Galvanized Reads</h1>
     </header>
     <h1>Books</h1>
-    <section>
-        <article class="">
-            <img class="booksImg" src="http://placehold.it/200x200">
-            <div class="bookTitle">
-                <h1>Book 1</h1>
-                <div class="myButtons">
-                <button class="myBtn" type="button" name="button">Edit</button>
-                <button class="myBtn" type="button" name="button">Remove</button>
-              </div>
-            </div>
-            <div class="">
-                <h3>Author Info</h3>
-                <h3>Genre</h3>
-                <h4>fdksafsldfldsjaflfjkdshkjfsdjkfhdksjfhkdshfksdhkjfhdskjfhdksjhfksf
-                  fdksjhfkjdshfkjshdkjfhdksjfhkjdshfkd
-                </h4>
-            </div>
-        </article>
-
-    </section>
+    <ul>
+      <li><a href="newBook.html">NEW BOOK</a></li>
+    </ul>
+    <section class="allBooks"></section>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/books.js"></script>
 </body>
 
 </html>
