--- a/public/authors.html
+++ b/public/authors.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Authors</title>
-  </head>
-  <body>
-    <h1>Authors</h1>
 
-  </body>
+<head>
+    <meta charset="utf-8">
+    <title>Galvanized Reads</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+</head>
+
+<body>
+    <header>
+        <img class="logo" src="http://placehold.it/100x100">
+        <h1>Galvanized Reads</h1>
+    </header>
+    <h1>Authors</h1>
+    <ul>
+      <li><a href="newAuthor.html">NEW AUTHOR</a></li>
+    </ul>
+    <section class="allAuthors"></section>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="./scripts/authors.js"></script>
+</body>
+
 </html>
