add edit and delete work for books

--- a/public/editBook.html
+++ b/public/editBook.html
@@ -17,28 +17,28 @@
     <form class="addLayout">
           <div class="adding">
               <label for="">Title</label>
-              <input class="newTitle" type="text" name="" value="">
+              <input class="editTitle" type="text" name="" value="">
           </div>
           <div class="adding">
               <label for="">Genre</label>
-              <input class="newGenre" type="text" name="" value="">
+              <input class="editGenre" type="text" name="" value="">
           </div>
 
           <div class="adding">
               <label for="">Cover Image URL</label>
-              <input class="newURL" type="text" name="" value="">
+              <input class="editURL" type="text" name="" value="">
           </div>
           <div class="adding">
               <label for="">description</label>
-              <input class="newDescription" type="text" name="" value="">
+              <input class="editDescription" type="text" name="" value="">
           </div>
           <div class="adding">
               <label for="">Authors</label>
-              <input class="newAuthor" type="textarea" name="" value="">
+              <input class="editAuthor" type="textarea" name="" value="">
           </div>
 
           <div class="adding">
-              <button class="addBook btn btn-primary" type="submit" name="button">Add Book</button>
+              <button class="editBook btn btn-primary" type="submit" name="button">Edit Book</button>
               <a class="btn btn-primary" href="books.html">Return to Books</a>
           </div>
       </form>
@@ -46,7 +46,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="./scripts/books.js"></script>
+    <script src="./scripts/editBook.js"></script>
 </body>
 
 </html>
