add edit delete completed for authors

--- a/public/deleteAuthor.html
+++ b/public/deleteAuthor.html
@@ -14,30 +14,13 @@
         <h1>Galvanized Reads</h1>
     </header>
     <h1>Books</h1>
-    <section class="allBooks">
-      <div class="container">
-          <article class="row">
-              <div class="col-md-3">
-                  <img class="authorImg" src="">
-              </div>
-              <div class="col-md-8">
-                  <div class="bookTitle">
-                      <h1 class="mainTitle">[author name]</h1>
+    <section class="deleteAuthor">
 
-                  </div>
-                  <div class="">
-                      <h3>Author Bio</h3>
-                      <p>Book info</p>
-                  </div>
-              </div>
-          </article>
-          <button class="deleteComplete btn btn-primary" type="button" name="button">Delete [Author name]</button>
-      </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- <script src="./scripts/books.js"></script> -->
+    <script src="./scripts/deleteAuthor.js"></script>
 </body>
 
 </html>
