--- a/public/editAuthor.html
+++ b/public/editAuthor.html
@@ -36,14 +36,14 @@
 
           <div class="adding">
               <button class="editAuthor btn btn-primary" type="submit" name="button">Edit Author</button>
-              <a class="btn btn-primary" href="Authors.html">Return to Authors</a>
+              <a class="btn btn-primary" href="authors.html">Return to Authors</a>
           </div>
       </form>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="./scripts/books.js"></script>
+    <script src="./scripts/editAuthor.js"></script>
 </body>
 
 </html>
