--- a/public/books.html
+++ b/public/books.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <img class="logo" src="http://placehold.it/100x100">
-        <h1>Galvanized Reads</h1>
+        <img class="logo" src="images/G.png">
+        <h1 class="logoTitle">Galvanize Reads</h1>
     </header>
     <h1>Books</h1>
     <ul>
