--- a/public/editAuthor.html
+++ b/public/editAuthor.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="http://placehold.it/100x100">
-        <h1>Galvanized Reads</h1>
-    </header>
+  <header>
+      <img class="logo" src="images/G.png">
+      <h1 class="logoTitle">Galvanize Reads</h1>
+  </header>
     <h1>Edit Author</h1>
     <form class="addLayout">
           <div class="adding">
