--- a/public/singleBook.html
+++ b/public/singleBook.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="http://placehold.it/100x100">
-        <h1>Galvanized Reads</h1>
-    </header>
+  <header>
+      <img class="logo" src="images/G.png">
+      <h1 class="logoTitle">Galvanize Reads</h1>
+  </header>
     <h1>Books</h1>
-    <section class="myBook">    
+    <section class="myBook">
     </section>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
